--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,22 +1,24 @@
-/* variables */
+/*
+  Adapted from Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
+/* base styles */
+
+/* colors */
 :root {
-
   /* text */
-
   /* light */
   /* --text-color: #181A1C;  */
   /* dark */
   --text-color: #c0c0c0; 
-
   --color-almost-black: #181A1C;
 
   /* background */
-
   /* light */
   /* --bg-color: #c0c0c0; */
   /* dark */
   --bg-color: #181A1C; 
-
   --color-light-grey: #c0c0c0;
 
   /* heading */
@@ -31,25 +33,94 @@
   --highlight-color: #ea9e8d;
   --color-peachy: #ea9e8d;
 
-
   /* misc */
   --color-silver-sand: #c4cbca;
   --color-almost-white: #f8f9fa;
 }
 
-/* base styles */
-body {
-  font-family: Menlo, monospace;
+/* Use a more-intuitive box-sizing model. */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
   margin: 0;
-  font-size: 1.1em;
+}
+
+/* Allow percentage-based heights in the application */
+html, body {
+  height: 100%;
+  background-color: var(--bg-color)
+}
+
+/* Typographic tweaks!
+  - Add accessible line-height
+  - Improve text rendering */
+body {
+  -webkit-font-smoothing: antialiased;
+  /* line-height: 1.5; */
+  /* padding: 1rem; */
+  font-family: Menlo, monospace;
+  font-size: 14px;
   background: var(--color-almost-white)
 }
+
+/* Improve media defaults */
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* Remove built-in form typography styles */
+input, button, textarea, select {
+  font: inherit;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
 ul, li, p, h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
 }
+
 ul {
   list-style-type: none;
+}
+
+/* forms */
+label {
+  /* display: block;
+  margin top & bottom
+  margin: 24px auto; */
+}
+
+label, span {
+/* display: block; 
+margin-bottom: 6px; */
+}
+
+input, textarea {
+/* padding: 8px 6px;
+font-size: 1em;
+color: var(--color-silver-sand);
+width: 100%;
+box-sizing: border-box;
+border: 1px solid #ddd;
+border-radius: 4px; */
+}
+
+textarea {
+/* min-height: 160px; */
+}
+
+/* Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+  font-size: 13px;
 }
 
 /* layout */
@@ -59,45 +130,20 @@ ul {
   display: inline-block;
 }
 
+/* buttons */
 .btn {
-  background: var(--bg-color);
+  background: var(--highlight-color);
   padding: 8px 12px;
   border-radius: 4px;
-  color: var(--primary-color);
+  color: var(--color-almost-black);
   cursor: pointer;
   font-size: 1em;
   font-weight: bold;
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--color-black-coral);
 }
 .btn:hover {
   opacity: 0.75;
   background: var(--bg-color);
-}
-
-/* forms */
-label {
-    /* display: block;
-    margin top & bottom
-    margin: 24px auto; */
-}
-  
-label, span {
-  /* display: block; 
-  margin-bottom: 6px; */
-}
-
-input, textarea {
-  /* padding: 8px 6px;
-  font-size: 1em;
-  color: var(--color-silver-sand);
-  width: 100%;
-  box-sizing: border-box;
-  border: 1px solid #ddd;
-  border-radius: 4px; */
-}
-
-textarea {
-  /* min-height: 160px; */
 }
 
 .error {
@@ -108,3 +154,21 @@ textarea {
   padding: 8px;
   margin: 10px 0;
 }
+
+/* Create a root stacking context */
+#root, #__next {
+  isolation: isolate;
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
