--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,36 +6,27 @@
 /* base styles */
 
 /* colors */
+
 :root {
-  /* text */
-  /* light */
-  /* --text-color: #181A1C;  */
-  /* dark */
-  --text-color: #c0c0c0; 
   --color-almost-black: #181A1C;
-
-  /* background */
-  /* light */
-  /* --bg-color: #c0c0c0; */
-  /* dark */
-  --bg-color: #181A1C; 
   --color-light-grey: #c0c0c0;
-
-  /* heading */
-  --heading-color: #696d7d;
   --color-black-coral: #696d7d;
-
-  /* primary */
-  --primary-color: #96bbbb;
   --color-opal: #96bbbb;
-
-  /* highlight */
-  --highlight-color: #ea9e8d;
   --color-peachy: #ea9e8d;
-
+  
   /* misc */
   --color-silver-sand: #c4cbca;
   --color-almost-white: #f8f9fa;
+}
+
+html {
+  --text-color: #c0c0c0; 
+  --bg-color: #181A1C; 
+  /* --text-color: #181A1C;  */
+  /* --bg-color: #c0c0c0; */
+  --heading-color: #696d7d;
+  --primary-color: #96bbbb;
+  --highlight-color: #ea9e8d;
 }
 
 /* Use a more-intuitive box-sizing model. */
@@ -63,7 +54,7 @@ body {
   /* padding: 1rem; */
   font-family: Menlo, monospace;
   font-size: 14px;
-  background: var(--color-almost-white)
+  background-color: var(--bg-color)
 }
 
 /* Improve media defaults */
@@ -75,6 +66,11 @@ img, picture, video, canvas, svg {
 /* Remove built-in form typography styles */
 input, button, textarea, select {
   font: inherit;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 form {
