Fix Navbar Links & Functionality

--- a/client/src/pages/Welcome/Welcome.css
+++ b/client/src/pages/Welcome/Welcome.css
@@ -38,7 +38,7 @@
 
 .about {
     display: flex;
-    color: var(--color-light);
+    color: var(--text-color);
     width: 257px;
     text-align: center;
 }
