--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,74 +1,39 @@
 .navbar {
-  /* width: 100%;
-  padding: 30px 0;
-  box-sizing: border-box;
-  margin-bottom: 80px; */
-  /* ------------------ */
+  z-index: 1;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
-  min-height: fit-content;
-  /* background-color: var(--color-almost-white); */
-  background-color: transparent;
+  height: 85px;
   padding: 15px 30px 15px 15px;
 }
-.navbar ul {
-  display: flex;
-  margin: 0 auto;
-  align-items: center;
-  justify-content: flex-end;
-}
+
 .navbar .logo {
-  /* font-weight: bold;
-  color: var(--heading-color);
-  letter-spacing: 1px;
   display: flex;
   align-items: center;
-  margin-right: auto; */
-  /* ----------------------- */
-  display: flex;
-  align-items: center;
-  gap: 7px;
+  margin-right: auto;
+  gap: 10px;
   font-family: Dokdo, "Helvetica Neue", sans-serif;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: bold; 
 }
 .navbar .logo img {
-  /* margin-right: 10px;
-  filter: invert(25%);
-  width: 36px;
-  margin-top: -8px; */
-  /* ----------------- */
   height: 50px;
 }
-.navbar a {
-  color: #333;
-  text-decoration: none;
-  margin-right: 20px;
+
+.navbar .content-right {
+  min-width: fit-content;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-/* --- */
+.navbar a {
+  color: var(--text-color);
+}
 
-import { Link } from "react-router-dom";
 
-styles & images
-import "./Navbar.css";
-import SoundWaveWhite from "./../assets/images/logo-img-white.png";
 
-    <Wrapper div>
-      <ul>
-        <li className="logo">
-          {/* <img src={SoundWaveWhite}  /> */}
-          <span>SoundWave</span>
-        </li>
-
-        <li>
-          <Link to="/login">login</Link>
-        </li>
-        <li>
-          <Link to="/signup">sign up</Link>
-        </li>
-        <li className="btn">logout</li>
-      </ul>
-    </Wrapper>
