--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,12 +29,10 @@ html {
   --highlight-color: #ea9e8d;
 }
 
-/* Use a more-intuitive box-sizing model. */
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
-/* Remove default margin */
 * {
   margin: 0;
 }
@@ -63,11 +61,6 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 
-/* Remove built-in form typography styles */
-input, button, textarea, select {
-  font: inherit;
-}
-
 a {
   text-decoration: none;
   color: var(--text-color);
@@ -88,6 +81,11 @@ ul {
 }
 
 /* forms */
+/* Remove built-in form typography styles */
+input, button, textarea, select {
+  font: inherit;
+}
+
 label {
   /* display: block;
   margin top & bottom
@@ -116,7 +114,8 @@ textarea {
 /* Avoid text overflows */
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
-  font-size: 13px;
+  font-size: 14px;
+  color: var(--text-color);
 }
 
 /* layout */
@@ -128,18 +127,16 @@ p, h1, h2, h3, h4, h5, h6 {
 
 /* buttons */
 .btn {
-  background: var(--highlight-color);
-  padding: 8px 12px;
+  /* background: var(--highlight-color); */
+  background-color: var(--color-opal);
+  padding: 4px 8px;
   border-radius: 4px;
   color: var(--color-almost-black);
   cursor: pointer;
-  font-size: 1em;
-  font-weight: bold;
   border: 1px solid var(--color-black-coral);
 }
 .btn:hover {
-  opacity: 0.75;
-  background: var(--bg-color);
+  text-decoration: line-through;
 }
 
 .error {
