--- a/client/src/pages/signup/Signup.css
+++ b/client/src/pages/signup/Signup.css
@@ -1,13 +1,20 @@
 .signup {
     margin: auto;
-    max-width: 325px;
+    min-width: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+
+.signup .form-container {
+    margin: auto;
+    width: 325px;
     display: flex;
     flex-direction: column;
 }
 
 .signup .title {
     margin: auto;
-    padding-bottom: 15px;
+    padding-bottom: 25px;
     font-size: 15px;
 }
 
@@ -30,6 +37,8 @@
 }
 
 .login-instead {
-    padding: 15px;
+    margin: auto;
+    width: fit-content;
+    padding-top: 30px;
     font-size: 13px;
 }
