--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -16,14 +16,23 @@
   margin-right: auto;
   gap: 10px;
   font-family: Dokdo, "Helvetica Neue", sans-serif;
+  color: var(--color-almost-white);
   font-size: 30px;
   font-weight: bold; 
 }
-.navbar .logo img {
+
+.navbar .logo-img {
+  width: 90px;
   height: 50px;
 }
 
-.navbar .content-right {
+.navbar .icons{
+  filter: invert(1);
+  height: 22px;
+  cursor: pointer;
+}
+
+.navbar .links-right {
   min-width: fit-content;
   margin-left: auto;
   display: flex;
@@ -31,9 +40,10 @@
   gap: 1rem;
 }
 
-.navbar a {
-  color: var(--text-color);
+.navbar .logout-link {
+  font-weight: bold;
 }
+
 
 
 
