--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,8 @@ img, picture, video, canvas, svg {
 
 a {
   text-decoration: none;
-  color: var(--text-color);
+  /* color: var(--text-color); */
+  color: inherit;
 }
 
 form {
