--- a/client/src/pages/profile/ArtistProfile.css
+++ b/client/src/pages/profile/ArtistProfile.css
@@ -1,9 +1,24 @@
 .artist-profile {
-max-width: fit-content;
+    border: 2px solid red;
+    width: 80vw;
+    max-width: 1100px;
+    margin: auto;
 }
 
+.artist-profile .menu-bar{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    padding-left: 40px;
+    font-weight: bold;
+    color: var(--color-almost-black);
+    background-color: var(--color-opal);
+    margin-bottom: 20px;
+}
 
-.artist-profile .menu {
-height: fit-content;
-/* set max width/height */
+.artist-profile .cols {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
 }
