Link Firebase Storage to Firestore for Album Files

--- a/client/src/pages/profile/ArtistProfile.css
+++ b/client/src/pages/profile/ArtistProfile.css
@@ -1,5 +1,5 @@
 .artist-profile {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 80vw;
     max-width: 1100px;
     margin: auto;
