--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -39,8 +39,18 @@
 .about {
     display: flex;
     color: var(--text-color);
-    width: 257px;
+    /* width: 257px; */
+    width: 30vw;
     text-align: center;
     margin-bottom: 75px;
+    margin-top: 5px;
+}
+
+.learn-more {
+    font-size: 30px;
+    color: var(--color-opal);
+    font-family: Dokdo, Menlo, monospace;
+    position: sticky;
+    bottom: 0;
 }
 
