--- a/client/src/pages/profile/ArtistSidebar.css
+++ b/client/src/pages/profile/ArtistSidebar.css
@@ -3,7 +3,7 @@
     width: 150px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 15px;
 }
 
 .sidebar .profile-pic img{
@@ -14,4 +14,5 @@
 
 .sidebar .artist-name {
     font-weight: bold;
+    margin-top: 20px;
 }
