--- a/client/src/pages/profile/ArtistDiscography.css
+++ b/client/src/pages/profile/ArtistDiscography.css
@@ -1,23 +1,26 @@
 .artist-discography {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     /* justify-content: space-between; */
     justify-content: flex-start;
     gap: 30px;
+    flex-direction: column;
 }
 
 .artist-discography .content-container {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     /* justify-content: space-between; */
     justify-content: flex-start;
     gap: 30px;
+    /* flex-direction: column; */
 }
 
-.artist-discography .dashboard {
-    
+.artist-discography .my-dashboard {
+    border: 2px solid green;
+
 }
