change about blurb

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 /*
-  Adapted from Josh's Custom CSS Reset
+  Adapted from Josh Comeau's Custom CSS Reset
   https://www.joshwcomeau.com/css/custom-css-reset/
 */
 
